style: Improve style of filter bar and labels increase font size fix filter icon alignment issue color contrast issue fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
 	color: #333;
+  list-style-type: none;
 }
 
 a {
@@ -131,11 +132,14 @@ nav h1 a span {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-icon {
-  width: 10%;
   min-width: 48px;
   min-height: 48px;
   right:15px;
   position: absolute;
+}
+
+.filter-bar-smalldev {
+  height: 48px;
 }
 
 .filter-options {
@@ -157,11 +161,16 @@ nav h1 a span {
   transform: translate(0, 0);
 }
 
-.filter-options__item {
+.filter-options__item, .form-title {
   border-bottom: 1px solid #E0E0E0;
   width: 100%;
   text-align: left;
+  color: #272525;
+  font-size: 16px;
 }
+ .form-title {
+   text-align: center;
+ }
 
 .filter-options select {
   background-color: white;
@@ -174,12 +183,17 @@ nav h1 a span {
   padding: 0 10px;
   width: 200px;
 }
+
+.label-filter-options {
+  padding-left: 10px;
+}
+
 /* ====================== Restaurant Listing ====================== */
 .restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 5px 15px 60px;
   text-align: center;
 }
 
@@ -199,7 +213,6 @@ nav h1 a span {
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
 }
 
 .restaurants-list li h1 {
@@ -257,7 +270,7 @@ nav h1 a span {
   background-color: #ccc;
 }
 
-.restaurantnreview{
+.restaurantnreview {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -358,7 +371,6 @@ nav h1 a span {
 #restaurant-hours td {
   color: #666;
 }
-
 /*====================== Responsive Details ====================== */
 .container {
   display: flex;
@@ -372,10 +384,16 @@ nav h1 a span {
 }
 
 @media screen and (min-width: 500px) and (max-width: 659px) {
-  .restaurants-list {
+  .restaurants-list, .filter-bar-smalldev {
     margin: 0 auto 0 auto;
     width: 460px;
+    position: relative;
   }
+
+  .filter-icon {
+    position: absolute;
+    right: 0;
+}
 }
 
 @media screen and (min-width: 660px) {
@@ -422,31 +440,39 @@ nav h1 a span {
     margin-right: 5px;
     width: calc((100% - 15px)/4);
   }
+
   .restaurants-list li:nth-child(4n+4) {
     margin-right: 0;
   }
 }
 
 @media screen and (min-width: 576px) {
-  .filter-icon {
+  .filter-bar-smalldev  {
     display:none;
   }
+
   .filter-options {
     z-index: 0;
     background-color: #009fff;
-    box-sizing: border-box;
+    margin-top: 0;
+    display: flex;
+    flex-wrap: wrap;
     width: 100vw;
     position: relative;
-    padding: 0;
+    justify-content: space-around;
     /* This trasform moves the drawer off canvas. */
     -webkit-transform: translate(0, 0);
     transform: translate(0, 0);
   }
+
   .filter-options__item {
     text-align: left;
     border-bottom: none;
-    display: inline; 
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
   }
+
   .filter-options select {
     background-color: white;
     border: 1px solid #fff;
@@ -455,7 +481,16 @@ nav h1 a span {
     letter-spacing: 0;
     margin: 10px;
     padding: 0 10px;
-    width: 250px;
+    width: 45vw;
+  }
+
+  .form-title {
+    width: 100vw;
+    color: #272525;
+    font-size: 16px;
+    letter-spacing: 1.2px;
+    text-align: center;
+    border-bottom: none;
   }
 
   .restaurants-list {
@@ -484,4 +519,11 @@ nav h1 a span {
   .app-wrap #footer {
     width: 50vw;
   }
+}
+
+@media screen and (min-width: 875px) {
+  .filter-options__item {
+    flex-direction: row;
+  }
+
 }
